markup grid + top-menu

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  
+  <div class="wrapper">
+    <div class="header">
+      <ul class="top-menu">
+        <li class="top-menu__list-item top-menu__list-item--active"><a href="#" class="top-menu__link top-menu__link--active">Особистий</a></li>
+        <li class="top-menu__list-item"><a href="#" class="top-menu__link">Малий та середній бізнес</a></li>
+        <li class="top-menu__list-item"><a href="#" class="top-menu__link">Корпоративний</a></li>
+      </ul>
+    </div>
+    <div class="content"></div>
+    <div class="sidebar"></div>
+  </div>
 </body>
 </html>
