add created components

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Ощадбанк</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -15,8 +15,33 @@
         <li class="top-menu__list-item"><a href="#" class="top-menu__link">Малий та середній бізнес</a></li>
         <li class="top-menu__list-item"><a href="#" class="top-menu__link">Корпоративний</a></li>
       </ul>
+      <div class="text-settings">
+        <div class="text-settings__size">
+          <a href="#" class="text-settings__size-decrement"></a>
+          <a href="#" class="text-settings__size-increment"></a>
+        </div>
+        <ul class="text-settings__language">
+          <li class="text-settings__language-list-item text-settings__language-list-item--selected">Українська</li>
+          <li class="text-settings__language-list-item">Русский</li>
+          <li class="text-settings__language-list-item">English</li>
+        </ul>
+      </div>
     </div>
+    <nav class="navigation">
+      <a class="logo" href="/"></a>
+      <ul class="navigation__list">
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Депозити</a></li>
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Кредити</a></li>
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Картки</a></li>
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Платежі</a></li>
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Перекази</a></li>
+        <li class="navigation__list-item"><a href="#" class="navigation__link">Інші розділи</a></li>
+      </ul>
+    </nav>
     <div class="content"></div>
+    <footer class="footer">
+      
+    </footer>
     <div class="sidebar"></div>
   </div>
 </body>
