add created components

--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,85 @@
         <li class="navigation__list-item"><a href="#" class="navigation__link">Інші розділи</a></li>
       </ul>
     </nav>
-    <div class="content"></div>
+    <div class="content">
+      <div class="slider">
+        <h2 class="slider__header">депозит довіра</h2>
+        <p class="slider__description">Можливість дострокового зняття<br>
+          Поповнення лише один раз<br>
+          Виплата відсотків на прикінці терміну</p>
+        <div class="slider__bottom-card">
+          <p>Усі депозити населення, розміщені в Ощадбанку захищені державою незалежно від суми</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__header">
+        <h2 class="card__title">відсоткові ставки <select class="card__dropdown" name="сгккутсн" id="">
+          <option class="card__dropdown-option" value="UAH">&#8372; у гривні</option>
+          <option value="USD">&#36; у доларах</option>
+          <option value="EUR">&#8364; у євро</option>
+        </select></h2>
+        <span class="card__sub-header">на 10.11.2015</span>
+        </div>
+
+        <table class="card__table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>від 100 &#8372;</th>
+              <th>від 1000 &#8372;</th>
+              <th>від 3000 &#8372;</th>
+              <th>від 3000 &#8372;</th>
+              <th>від 3000 &#8372;</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1 тиждень</td>
+              <td>18,0%</td>
+              <td>18,0%</td>
+              <td>18,0%</td>
+              <td>18,0%</td>
+              <td>18,0%</td>
+            </tr>
+            <tr>
+              <td>2 тижні</td>
+              <td>18,5%</td>
+              <td>18,5%</td>
+              <td>18,5%</td>
+              <td>18,5%</td>
+              <td>18,5%</td>
+            </tr>
+            <tr>
+              <td>1 мысяць</td>
+              <td>19,0%</td>
+              <td>19,5%</td>
+              <td>19,3%</td>
+              <td>20,0%</td>
+              <td>20,2%</td>
+            </tr>
+            <tr>
+              <td>2 мысяці</td>
+              <td>19,5%</td>
+              <td>19,5%</td>
+              <td>19,5%</td>
+              <td>19,5%</td>
+              <td>19,5%</td>
+            </tr>
+            <tr>
+              <td>6 місяців</td>
+              <td>20,5%</td>
+              <td>20,5%</td>
+              <td>20,5%</td>
+              <td>20,5%</td>
+              <td>20,5%</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <footer class="footer">
-      
+
     </footer>
     <div class="sidebar"></div>
   </div>
