add component button

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,8 @@
             </tr>
           </tbody>
         </table>
+
+        <a href="#" class="button button--medium button--blue">Порівняти з іншими депозитами</a>
       </div>
     </div>
     <footer class="footer">
